--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -2,18 +2,18 @@
   <table class="table table-striped">
   <thead>
   <tr>
+    <th>ID</th>
     <th>Name</th>
     <th>Country</th>
     <th>Delete</th>
-    <th>Update</th>
     </tr>
   </thead>
   <tbody>
       <tr *ngFor="let user of users">
+          <td>{{user.id}}</td>
           <td>{{user.name}}</td>
           <td>{{user.country}}</td>
           <td><button class="btn btn-danger" (click)="deleteUser(user)"> Delete</button></td>
-          <td><button class="btn btn-danger" (click)="updateUser(user)"> Update</button></td>
       </tr>
   </tbody>
     </table>
